tests/integrations/basic-fail/tests/actual_tests/rustc_ice.stderr
error: internal compiler error: no errors reported for args
 --> $DIR/rustc_ice.rs:8:5
  |
8 |     add("42", 3);
  |     ^^^^^^^^^^^^

thread 'rustc' panicked
